Bug 11361 - my servers with nvidia mcp55 nic don't work with msi in second kernel by kexec
Summary: my servers with nvidia mcp55 nic don't work with msi in second kernel by kexec
Status: CLOSED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Network (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Jeff Garzik
URL:
Keywords:
Depends on:
Blocks: Regressions-2.6.26
  Show dependency tree
 
Reported: 2008-08-17 09:56 UTC by Rafael J. Wysocki
Modified: 2008-09-06 01:00 UTC (History)
2 users (show)

See Also:
Kernel Version: commit f735a2a1a4f2a0f5cd823ce323e82675990469e2
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments

Description Rafael J. Wysocki 2008-08-17 09:56:44 UTC
Subject    : [PATCH] net: forcedeth use pci_choose_state instead of PCI_D3hot - v2
Submitter  : Yinghai Lu <yhlu.kernel@gmail.com>
Date       : 2008-08-17 6:25
References : http://marc.info/?l=linux-kernel&m=121895439927053&w=4
Handled-By : Rafael J. Wysocki <rjw@sisk.pl>

This entry is being used for tracking a regression from 2.6.26.  Please don't
close it until the problem is fixed in the mainline.
Comment 1 Rafael J. Wysocki 2008-08-19 12:10:06 UTC
Patch : http://marc.info/?l=linux-kernel&m=121917167232014&w=4
Comment 2 Adrian Bunk 2008-09-06 01:00:14 UTC
fixed by commit 3cb5599a84c557c0dd9a19feb63a3788268cf249

Note You need to log in before you can comment on or make changes to this bug.